<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.settings.SettingsFragment">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_button"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text"
        android:textSize="20sp"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/profileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/button_background"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvBackText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile_icon"
            android:layout_marginEnd="8dp"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_text"
            android:textSize="16sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Tombol "Open Sentence" -->
    <LinearLayout
        android:id="@+id/helpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/button_background"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/profileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/helpIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_help"
            android:contentDescription="@string/help_icon"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textSize="16sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/button_background"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/helpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logoutIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logout_icon"
            android:layout_marginEnd="8dp" />


        <TextView
            android:id="@+id/logoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_text"
            android:textSize="16sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
