<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <!-- Title SignUp -->
    <TextView
        android:id="@+id/titleSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Subtitle below Login title -->
    <TextView
        android:id="@+id/signupText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text1"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/titleSignup"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isyara_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/titleSignup"
        app:layout_constraintStart_toEndOf="@id/signupText1" />

    <!-- Subtitle below Login title -->
    <TextView
        android:id="@+id/signupText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text2"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/signupText1"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- CardView for Email, Password, and Login Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/signupText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name_input"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:background="@drawable/input_border"
                android:drawableTint="@color/primary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_profile"/>

            <!-- Email Input -->
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="example@gmail.com"
                android:hint="@string/email_input"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:background="@drawable/input_border"
                android:drawableTint="@color/primary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_email"/>

            <!-- Password Input -->
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="******"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:background="@drawable/input_border"
                android:drawableTint="@color/primary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_password"/>

            <!-- Login Button -->
            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:textSize="16sp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Text for "Don't have an account?" and Sign Up link -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/cardViewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:layout_marginStart="4dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
