<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">

    <!-- Gambar besar di tengah -->
    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="390dp"
        android:layout_above="@+id/bottomCard"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/onboard_ic"
        android:scaleType="centerCrop"
        android:src="@drawable/onboard_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-17dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/isyara_title"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/cardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/cardTitle"
                android:layout_marginTop="8dp"
                android:text="@string/isyara_onboard"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <Button
                style="@style/RoundedButton"
                android:id="@+id/loginButton"
                android:layout_width="400dp"
                android:layout_height="58dp"
                android:layout_below="@id/cardDescription"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:text="@string/login_text"
                android:textSize="16sp"
                android:backgroundTint="@color/primary"
                android:textColor="@android:color/white" />

            <Button
                style="@style/RoundedButton"
                android:id="@+id/signupButton"
                android:layout_width="400dp"
                android:layout_height="58dp"
                android:layout_below="@id/loginButton"
                android:layout_centerHorizontal="true"
                android:text="@string/signup_text"
                android:textSize="16sp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
