<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Button Kembali -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:scaleType="fitXY"
        android:contentDescription="@string/back_button"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Text judul setelah tombol kembali -->
    <TextView
        android:id="@+id/tvBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_text"
        android:textSize="20sp"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        android:layout_marginStart="8dp" />

    <!-- Container Profil -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profileContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvBackText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/primary">

            <!-- Gambar Profil di Kiri -->
            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_profile"
                android:contentDescription="@string/profile_picture"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical" />

            <!-- Tombol di Kanan (vertikal) -->
            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="end">

                <!-- Tombol Edit Profile -->
                <LinearLayout
                    android:id="@+id/editProfileButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/on_primary"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/editProfileText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ganti Foto"
                        android:textSize="14sp"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <!-- Tombol Logout -->
                <LinearLayout
                    android:id="@+id/logoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/white"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/logoutText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hapus Foto"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/profileContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="example@gmail.com"
        android:hint="@string/name_dummy"
        android:textColor="@color/primary"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:background="@drawable/input_border"
        android:padding="10dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_profile"
        android:drawableTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <LinearLayout
        android:id="@+id/openWordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/openWordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:textSize="16sp"
            android:visibility="visible"
            android:textColor="@android:color/white" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
